# pocket-plus

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.benchmark  LICENSE  README.md  docker-compose.yml
.github/workflows/: c-build.yml  comprehensive-tests.yml  cpp-build.yml  cpp-safety.yml  go-build.yml  java-build.yml  micropython-build.yml  misra.yml  pages.yml  python-build.yml  rust-build.yml
c/: CHANGELOG.md  Makefile  README.md
c/include/: pocket_plus.h
docs/: ALGORITHM.md  BENCHMARK.md  GOTCHAS.md  GUIDELINES.md  README.md  TESTING.md  algorithm-overview.md  ccsds-specification.md  fuzzing-report.md  implementation-guide.md  index.html
go/pocketplus/: pocketplus.go
implementations/c/: .gitignore  Dockerfile  Doxyfile  Makefile  README.md  compress_test.c  misra.supp
implementations/c/fuzz/: Dockerfile  Makefile  README.md  fuzz_compress.c  fuzz_decompress.c  fuzz_roundtrip.c
implementations/c/include/: pocket_plus.h  pocketplus.h
implementations/c/src/: bitbuffer.c  bitvector.c  cli.c  compress.c  decompress.c  encode.c  mask.c
implementations/c/tests/: test_bench.c  test_bitbuffer.c  test_bitvector.c  test_cli.sh  test_compress.c  test_decompress.c  test_encode.c  test_malformed.c  test_mask.c  test_packet_loss.c  test_reference.sh  test_robustness.c  test_vectors.c
implementations/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  safety.supp
implementations/cpp/bench/: bench.cpp
implementations/cpp/include/pocketplus/: bitbuffer.hpp  bitreader.hpp  bitvector.hpp  compressor.hpp  config.hpp  decoder.hpp  decompressor.hpp  encoder.hpp  error.hpp  mask.hpp  pocketplus.hpp
implementations/cpp/src/: bitbuffer.cpp  bitreader.cpp  bitvector.cpp  cli.cpp  compressor.cpp  decoder.cpp  decompressor.cpp  encoder.cpp
implementations/cpp/tests/: test_bitbuffer.cpp  test_bitreader.cpp  test_bitvector.cpp  test_cli.sh  test_compressor.cpp  test_decoder.cpp  test_decompressor.cpp  test_edge_cases.cpp  test_encoder.cpp  test_mask.cpp  test_vectors.cpp
implementations/go/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod
implementations/go/cmd/pocketplus/: main.go
implementations/go/pocketplus/: benchmark_test.go  bitbuffer.go  bitbuffer_test.go  bitreader.go  bitreader_test.go  bitvector.go  bitvector_test.go  compress.go  compress_test.go  compressor.go  decode.go  decode_test.go  decompress.go  decompressor.go  doc.go  encode.go  encode_test.go  mask.go  mask_test.go  pocketplus_test.go  vectors_test.go
implementations/go/scripts/: generate-api-docs.sh  generate-test-report.sh
implementations/java/: .gitignore  Dockerfile  Makefile  README.md  checkstyle.xml  pom.xml
implementations/java/src/main/java/space/tanagra/pocketplus/: BitBuffer.java  BitReader.java  BitVector.java  Compressor.java  Decoder.java  Decompressor.java  Encoder.java  MaskOperations.java  PocketException.java  PocketPlus.java
implementations/java/src/main/java/space/tanagra/pocketplus/cli/: Bench.java  Main.java
implementations/java/src/main/javadoc/: overview.html
implementations/java/src/test/java/space/tanagra/pocketplus/: Benchmark.java  BitBufferReaderTest.java  BitVectorTest.java  EncoderDecoderTest.java  PocketPlusTest.java  VectorsTest.java
implementations/java/tests/: test_cli.sh
implementations/python/: .gitignore  CHANGELOG.md  Dockerfile  README.md  cli.py  pyproject.toml
implementations/python/pocket_plus/: __init__.py
implementations/python/pocketplus/: __init__.py  bitbuffer.py  bitreader.py  bitvector.py  compress.py  decode.py  decompress.py  encode.py  mask.py
implementations/python/tests/: __init__.py  conftest.py  test_bitbuffer.py  test_bitreader.py  test_bitvector.py  test_cli.py  test_compress.py  test_decode.py  test_decompress.py  test_encode.py  test_mask.py  test_stub.py  test_vectors.py
implementations/rust/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml
implementations/rust/.config/: nextest.toml
implementations/rust/scripts/: generate-test-report.sh
implementations/rust/src/: bitbuffer.rs  bitreader.rs  bitvector.rs  compress.rs  decode.rs  decompress.rs  encode.rs  error.rs  lib.rs  mask.rs
implementations/rust/tests/: test_cli.sh  vectors.rs
python/: .gitignore  pyproject.toml
scripts/: benchmark.sh  generate-test-report.sh
test-vector-generator/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
test-vector-generator/c-reference/: .gitignore  CHANGES.md  ISSUES.md  Makefile  PROVENANCE.md  README.md  pocket_compress.c  pocket_decompress.c
test-vector-generator/configs/: edge-cases.yaml  hiro.yaml  housekeeping.yaml  simple.yaml  venus-express.yaml
test-vector-generator/input-generators/: common.py  generate.py  generate_edge-cases.py  generate_hiro.py  generate_housekeeping.py  generate_large_scale.py  generate_simple.py  requirements.txt
test-vector-generator/scripts/: copy-to-repo.sh  generate-all.sh  validate_ccsds_style.py  verify-vector.sh
test-vectors/: README.md
test-vectors/expected-output/: edge-cases-metadata.json  edge-cases.bin.pkt  hiro-metadata.json  hiro.bin.pkt  housekeeping-metadata.json  housekeeping.bin.pkt  simple-metadata.json  simple.bin.pkt  venus-express-metadata.json
