[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketplus"
version = "1.0.0"
description = "POCKET+ lossless compression algorithm (CCSDS 124.0-B-1) for spacecraft housekeeping data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Tanagra Space"}
]
keywords = ["compression", "spacecraft", "ccsds", "pocketplus", "housekeeping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tanagraspace/pocket-plus"
Documentation = "https://github.com/tanagraspace/pocket-plus/tree/main/docs"
Repository = "https://github.com/tanagraspace/pocket-plus"
Issues = "https://github.com/tanagraspace/pocket-plus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketplus*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
